# HED-CPP

./: .gitignore  CMakeLists.txt  README.md
include/: detector.h  hed.h
source/: detector.cpp  hed.cpp  test_loading.cpp
